--- a/snps/templates/navigation_base.html
+++ b/snps/templates/navigation_base.html
@@ -41,6 +41,8 @@
   <!-- Custom styles for this template -->
   <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/classic.css') }}">
 
+  
+
   <!-- For Modal -->
   <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
   <script src="../static/jquery.confirm/jquery.confirm.js"></script>
@@ -71,6 +73,9 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#report">Report</a>
                     </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
