--- a/snps/templates/reports/test.html
+++ b/snps/templates/reports/test.html
@@ -100,26 +100,27 @@
       
   <div class="container">
     <div class="row">
-      <div class="col-lg-12 text-center">
+      <div class="col-lg-12 text-center" style="padding-top:5%">
         <h2 class="section-heading">Your Report</h2>
         <hr class="primary">
       </div>
     </div>
   </div>
   <aside>
-  
-    <div class="card">
+      <div class="card">
       <div class="card-block">
-        <h4 class="card-title">homo sapiens gene (not Neanderthal)</h4>
-        <h6 class="card-subtitle text-muted">RSID: 12416000</h6>
+        <h4 class="card-title">factor 3: measure of attention and executive function-trails a and b</h4>
+        <h6 class="card-subtitle text-muted">Keywords: brain | aging</h6>
       </div>
       <div class="card-block">
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <a href="#" class="card-link">Card link</a>
-        <a href="#" class="card-link">Another link</a>
+        <p class="card-text">Source/Literature: Genetic correlates of brain aging on MRI and cognitive test measures: a genome-wide association and linkage analysis in the Framingham Study.</p>
+        <p class="card-text">Your Genotype: GG | P-Value: None </p>
+        <h5>Read More: </h5>
+        <a href="http://www.ncbi.nlm.nih.gov/pubmed/?term=17903297" class="card-link">PubMed: 17903297</a>
+        <a href="http://www.snpedia.com/index.php/rs2832077" class="card-link">SNPedia: rs2832077</a>
       </div>
     </div>
-  
+
     <div class="card">
       <div class="card-block">
         <h4 class="card-title">reduced warfarin dose if treated for VTE</h4>
@@ -131,7 +132,41 @@
         <a href="#" class="card-link">Another link</a>
       </div>
     </div>
+      <div class="card">
+      <div class="card-block">
+        <h4 class="card-title">homo sapiens gene (not Neanderthal)</h4>
+        <h6 class="card-subtitle text-muted">Keywords: </h6>
+      </div>
+      <div class="card-block">
+        <p class="card-text">Your Genotype: GG | P-Value: None </p>
+        <a href="http://www.ncbi.nlm.nih.gov/pubmed/?term=" class="card-link">PubMed Link:  </a>
+        <a href="http://www.snpedia.com/index.php/rs12416000" class="card-link">SNPedia Link: 12416000</a>
+      </div>
+    </div>
   
+    <div class="card">
+      <div class="card-block">
+        <h4 class="card-title">reduced warfarin dose if treated for VTE</h4>
+        <h6 class="card-subtitle text-muted">Keywords: </h6>
+      </div>
+      <div class="card-block">
+        <p class="card-text">Your Genotype: CT | P-Value: None </p>
+        <a href="http://www.ncbi.nlm.nih.gov/pubmed/?term=" class="card-link">PubMed Link:  </a>
+        <a href="http://www.snpedia.com/index.php/rs9923231" class="card-link">SNPedia Link: 9923231</a>
+      </div>
+    </div>
+  
+    <div class="card">
+      <div class="card-block">
+        <h4 class="card-title">Lower 0.87x risk of Type 1 Diabetes.</h4>
+        <h6 class="card-subtitle text-muted">Keywords: </h6>
+      </div>
+      <div class="card-block">
+        <p class="card-text">Your Genotype: AC | P-Value: None </p>
+        <a href="http://www.ncbi.nlm.nih.gov/pubmed/?term=" class="card-link">PubMed Link:  </a>
+        <a href="http://www.snpedia.com/index.php/rs9273363" class="card-link">SNPedia Link: 9273363</a>
+      </div>
+    </div>
     <div class="card">
       <div class="card-block">
         <h4 class="card-title">Morbidity-free survival at age 65</h4>
@@ -144,18 +179,7 @@
       </div>
     </div>
   
-    <div class="card">
-      <div class="card-block">
-        <h4 class="card-title">factor 3: measure of attention and executive function-trails a and b</h4>
-        <h6 class="card-subtitle text-muted">Keywords: brain|aging</h6>
-      </div>
-      <div class="card-block">
-        <p class="card-text">Source/Literature: Genetic correlates of brain aging on MRI and cognitive test measures: a genome-wide association and linkage analysis in the Framingham Study.</p>
-        <a href="http://www.ncbi.nlm.nih.gov/pubmed/?term=17903297" class="card-link">PubMed Link: 17903297</a>
-        <a href="http://www.snpedia.com/index.php/rs2832077" class="card-link">RSID Link: rs2832077</a>
-      </div>
-    </div>
-  
+
     <div class="card">
       <div class="card-block">
         <h4 class="card-title">if a smoker, somewhat more likely to develop COPD</h4>
