--- a/snps/static/startbootstrap-creative-gh-pages/css/creative.css
+++ b/snps/static/startbootstrap-creative-gh-pages/css/creative.css
@@ -209,6 +209,7 @@ header .header-content .header-content-inner p {
   }
 }
 .section-heading {
+  font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
   margin-top: 0;
 }
 .service-box {
