--- a/snps/templates/report.html
+++ b/snps/templates/report.html
@@ -10,40 +10,33 @@
     </div>
   </div>
   <aside>
-  {% for snpedia_match in snpedia_matches %}
-    <div class="card">
-      <div class="card-header">
-        {{ snpedia_match.source }}
+  {% for rsid in rsid_map %}
+
+      <div class="card">
+        <div class="card-block">
+          <h4 class="card-title"><a href="http://www.snpedia.com/index.php/rs{{ rsid }}">rs{{ rsid }}</a></h4>
+          {% set genotype = rsid_genotype_map[rsid] %}
+          <h6 class="card-subtitle">Your Genotype: {{ genotype }}</h6>
+        </div>
+        {% for entry in rsid_map[rsid] %}
+        <div class="card-block" style="font-size:85%">
+          <p class="card-text text-muted" style="text-align:right"><b>{{ entry.source }}</b></p>
+          {% if entry.source == 'snpedia' %}
+          <p>{{ entry.description }}<div class="card-subtitle" style="padding-left:15px">Magnitude: {{ entry.magnitude }} | Repute: {{ entry.repute }}</div></p>
+          {% elif entry.source == 'gwas_catalog' %}
+          <p><b>{{ entry.journal }}</b> {{ entry.title }} <a href="http://www.ncbi.nlm.nih.gov/pubmed/?term={{ entry.pmid }}" class="card-link" style="font-size:80%">Read Paper</a>
+          <div class="card-subtitle" style="padding-left:15px">P-Value: {{ entry.pvalue }} | Odds Ratio: {{ entry.oddsratio }}</div></p>
+          <p class="card-text">{{ entry.name }} | {{ entry.synonyms }}</p>
+          {% elif entry.source == 'auto' %}
+          <p class="card-text">{{ entry.pmid }}</p>
+          <p class="card-text">{{ entry.rsid }}</p>
+          <p class="card-text">{{ entry.simple_phenotype }}</p>
+          <p class="card-text">{{ entry.detailed_phenotype }}</p>
+          <p class="card-text">{{ entry.pvalue }}</p>
+          {% endif %}
+        </div>
+      {% endfor %}
       </div>
-      <div class="card-block">
-        <h4 class="card-title">{{ snpedia_match.description }}</h4>
-        <h6 class="card-subtitle text-muted">Magnitude: {{ snpedia_match.magnitude }} | Repute: {{ snpedia_match.repute }} | P-Value: {{ snpedia_match.pvalue }} | Odds Ratio: {{ snpedia_match.oddsratio }}</h6>
-      </div>
-      <div class="card-block">
-        <div style="font-size:90%"><a href="http://www.snpedia.com/index.php/{{ snpedia_match.snp.rs_id }}" class="card-link">{{ snpedia_match.snp.rs_id }}</a> : {{ snpedia_match.genotype }}</div>
-      </div>
-    </div>
-  {% endfor %}
-  {% for i in range(n) %}
-  {% set gwas_catalog_match = gwas_catalog_matches[i] %}
-  {% set user_genotype = user_genotypes[i] %}
-    <div class="card">
-      <div class="card-header">
-        {{ gwas_catalog_match.source }}
-      </div>
-      <div class="card-block">
-        <h4 class="card-title">{{ gwas_catalog_match.phenotype.name }}</h4>
-        <h6 class="card-subtitle text-muted">Magnitude: {{ gwas_catalog_match.magnitude }} | Repute: {{ gwas_catalog_match.repute }} | P-Value: {{ gwas_catalog_match.pvalue }} | Odds Ratio: {{ gwas_catalog_match.oddsratio }}</h6>
-      </div>
-      <div class="card-block">
-        <p class="card-text">Keywords: {{ gwas_catalog_match.phenotype.synonyms }}</p>
-        <p class="card-text"><b>{{ gwas_catalog_match.paper.journal }}:</b> {{ gwas_catalog_match.paper.title }}
-        <a href="http://www.ncbi.nlm.nih.gov/pubmed/?term={{ gwas_catalog_match.paper.pubmed_id }}" class="card-link" style="font-size:80%">Read Paper</a></p>
-        {% for entry in user_genotype %}
-          <div style="font-size:90%"><a href="http://www.snpedia.com/index.php/{{ entry[0] }}" class="card-link">{{ entry[0] }}</a> : {{ entry[1] }}</div><br>
-        {% endfor %}
-      </div>
-    </div>
   {% endfor %}
   </aside>
 
