--- a/snps/templates/upload.html
+++ b/snps/templates/upload.html
@@ -2,7 +2,7 @@
 {% block title %}Upload{% endblock %}
 {% block navcontent %}
 <aside>
-  <div class="container welcome">
+  <div class="container text-center">
     <h3 class="text-muted">Welcome. To generate your report, upload your SNP file below.</h3>
     <form id="target" action="upload" method="post" enctype="multipart/form-data">
       <br /><br />
