--- a/snps/templates/no_report.html
+++ b/snps/templates/no_report.html
@@ -1,4 +1,4 @@
-{% extends "jumbo_base.html" %}
+{% extends "navigation_base.html" %}
 {% block title %}Upload{% endblock %}
 {% block nav %}
     <li class="active"><a href="{{ url_for('report') }}">Report</a></li>
